component sdocs
fixes #65